[tool.poetry]
name = "flux_controlnet"
version = "0.0.0"
description = ""
authors = ["Paul Asquin"]
readme = "README.md"
packages = [{ include = "flux_controlnet", from = "./src" }]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.6.2"
pytest = "^8.1.1"
mypy = "^1.9.0"
pillow = "^11.0.0"
requests = "^2.32.3"
simple-parsing = "^0.1.6"
pandas = "^2.2.3"
pydantic = "^2.9.2"
tqdm = "^4.67.0"
diffusers = "^0.31.0"
torch = "^2.5.1"
transformers = "^4.46.2"
accelerate = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
